--- a/matrufsc/src/index.css
+++ b/matrufsc/src/index.css
@@ -1,6 +1,12 @@
 :root {
+    font-family: monospace;
+
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    background-color: #eeeeee;
 }
