fix: remove unused class

--- a/matrufsc/src/components/info-wrapper/InfoWrapper.module.css
+++ b/matrufsc/src/components/info-wrapper/InfoWrapper.module.css
@@ -1,3 +1,9 @@
+.container {
+    overflow: auto;
+    width: 890px;
+    margin: 0 auto;
+}
+
 .head {
     display: flex;
     justify-content: space-between;
