--- a/matrufsc/src/components/info-wrapper/InfoWrapper.module.css
+++ b/matrufsc/src/components/info-wrapper/InfoWrapper.module.css
@@ -1,10 +1,14 @@
 .container {
+    padding: 1.5rem 0;
+
     overflow: auto;
     width: 890px;
     margin: 0 auto;
 }
 
 .head {
+    margin-bottom: 1.5rem;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,8 +18,9 @@
     display: flex;
     justify-content: space-between;
 
-    .links {
+    .link {
         display: flex;
         gap: 1rem;
+        white-space: nowrap;
     }
 }
