--- a/matrufsc/src/components/horarios/Horarios.module.css
+++ b/matrufsc/src/components/horarios/Horarios.module.css
@@ -51,3 +51,18 @@
         text-align: center;
     }
 }
+
+.ui_horario {
+    background-color: #eeeeee;
+    border: 1px solid black;
+    position: relative;
+    font-size: 11px;
+}
+
+.ui_horario_celula {
+    background-color: white;
+    border: 1px solid black;
+    height: 18px;
+    width: 60px;
+    text-align: center;
+}
